fix: navigation list alignment

--- a/assets/css/classes.css
+++ b/assets/css/classes.css
@@ -189,6 +189,7 @@ textarea.btn-md {
 .card .list {
   display: flex;
   align-items: center;
+  line-height: initial;
   padding: var(--sm-gap) var(--md-gap);
 }
 
